feat: support durable PDF sends
